--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Strikeer\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=/home/strikeer/.netbeans/12.5/build.properties
