--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/TPFinal.jar
+dist.jar=${dist.dir}/TP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/TPFinal
+dist.jlink.output=${dist.jlink.dir}/TP
 excludes=
-file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Strikeer\\Desktop\\mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.26.jar-1=lib\\mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=TPFinal
-main.class=tpfinal.TPFinal
+jlink.launcher.name=TP
+main.class=Main.TP
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
